--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
   font-family: 'Poppins',sarif;
 font-weight: 400;
 font-size: 18px;
-line-height: 27px;
+line-height: 1.5;
 letter-spacing: 0%;
 color: #B0ADAD;
 background-color: #212121;
@@ -165,3 +165,49 @@ margin-bottom: 24px;
   border-radius: 20px;
 }
 /* hero end*/
+
+.main-content {
+  padding-top: 60px;
+  padding-bottom: 60px ;
+}
+
+.about-me {
+  padding-top: 46px;
+}
+
+.about-me-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-me-img {
+  width: 553px;
+  margin-right: 47px;
+}
+
+.about-me-info {
+  min-width: 580px;
+  width: 100%;
+}
+
+.about-me-title3 {
+  color: #4C70EF;
+  font-weight: 600;
+  font-size: 24px;
+  line-height:1.5;
+  letter-spacing: 10%;
+  margin-bottom: 12px;
+}
+
+.about-me-title {
+font-weight: 600;
+font-size: 36px;
+line-height: 1.5;
+letter-spacing: 0%;
+color:#fff;
+}
+
+.about-me-text:not(:last-child) {
+  margin-bottom: 16px;
+}
