--- a/css/style.css
+++ b/css/style.css
@@ -1,213 +1,335 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 *::selection {
-  background-color:#B0ADAD;
-  color: #fff;
+	background-color: #b0adad;
+	color: #fff;
 }
-ul,ol{
-  list-style: none;
-}
-
-a{
-  text-decoration: none;
+ul,
+ol {
+	list-style: none;
 }
 
-body{
-  font-family: 'Poppins',sarif;
-font-weight: 400;
-font-size: 18px;
-line-height: 1.5;
-letter-spacing: 0%;
-color: #B0ADAD;
-background-color: #212121;
+a {
+	text-decoration: none;
+}
 
+body {
+	font-family: 'Poppins', sarif;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 1.5;
+	letter-spacing: 0%;
+	color: #b0adad;
+	background-color: #212121;
 }
 
 .container {
-  min-width: 1220px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+	max-width: 1220px;
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
-.site-top{
-    background-image: url('../images/header/bg-image\ 1.png');
-  background-repeat: no-repeat;  background-size: cover;
-  background-position: center;
-  padding-bottom: 208px;
+.site-top {
+	background-image: url('../images/header/bg-image\ 1.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-bottom: 208px;
 }
 
-.site-header{
-  padding-top: 18px;
-  padding-bottom: 209px;
+.site-header {
+	padding-top: 18px;
+	padding-bottom: 209px;
 }
 
 .site-header-container {
-  min-width: 1263px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	min-width: 1263px;
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+	padding-left: 20px;
+	padding-right: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
-.logo{
-  display: flex;
-  align-items: center;
-  font-family: "Poppins";
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #fff;
-  transition: all 0.4s ease;
+.logo {
+	display: flex;
+	align-items: center;
+	font-family: 'Poppins';
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.5;
+	color: #fff;
+	transition: all 0.4s ease;
 }
 
-.logo img{
-  margin-right: 14px;
+.logo img {
+	margin-right: 14px;
 }
 
-.logo:hover{
-  opacity: 0.8;
-  transform: scale(1.1);
+.logo:hover {
+	opacity: 0.8;
+	transform: scale(1.1);
 }
 
-.logo:active{
-  opacity: 0.6;
+.logo:active {
+	opacity: 0.6;
 }
 
 .sitenav {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 .sitenav-item:not(:last-child) {
-  margin-right: 32px;
-  transition: all 0.6s ease;
+	margin-right: 32px;
+	transition: all 0.6s ease;
 }
 
-.sitenav-item:hover{
-  opacity: 0.8;
-  transform: translateY(-5px);
+.sitenav-item:hover {
+	opacity: 0.8;
+	transform: translateY(-5px);
 }
 
 .sitenav-link {
-  font-family: "Poppins";
-font-weight: 600;
-font-size: 18px;
-color: #fff;
-    transition: all 0.6s ease;
-
+	font-family: 'Poppins';
+	font-weight: 600;
+	font-size: 18px;
+	color: #fff;
+	transition: all 0.6s ease;
 }
 
-.sitenav-link:hover{
-  color: #ff2f2f;
+.sitenav-link:hover {
+	color: #ff2f2f;
 }
 
-.sitenav-link:active{
-  opacity: 0.6;
+.sitenav-link:active {
+	opacity: 0.6;
 }
 
 /* hero start*/
 .hero-container {
-  max-width: 540px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-  color: #fff;
-  text-align: center;
+	max-width: 540px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 20px;
+	padding-right: 20px;
+	color: #fff;
+	text-align: center;
 }
 .hero-title {
-  margin-bottom: 24px;
-  font-weight: 600;
-  font-size: 64px;
-  line-height: 1.5;
+	margin-bottom: 24px;
+	font-weight: 600;
+	font-size: 64px;
+	line-height: 1.5;
 }
 .hero-text {
-font-weight: 600;
-font-size: 1.5;
-line-height: 100%;
-margin-bottom: 24px;
+	font-weight: 600;
+	font-size: 1.5;
+	line-height: 100%;
+	margin-bottom: 24px;
 }
 .socila {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .social-item:not(:last-child) {
-  margin-right: 24px;
+	margin-right: 24px;
 }
 .social-link {
-    width: 44px;
-  height: 44px;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  transition: all 0.8s ease;
+	width: 44px;
+	height: 44px;
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	transition: all 0.8s ease;
 }
-.social-link:hover{
-  transform: scale(1.1);
-  border-radius: 15px;
+.social-link:hover {
+	transform: scale(1.1);
+	border-radius: 15px;
 }
-.social-link:active{
-  opacity: 0.6;
-  border-radius: 20px;
+.social-link:active {
+	opacity: 0.6;
+	border-radius: 20px;
 }
 /* hero end*/
 
 .main-content {
-  padding-top: 60px;
-  padding-bottom: 60px ;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 
 .about-me {
-  padding-top: 46px;
+	padding-top: 46px;
+	padding-bottom: 60px;
 }
 
 .about-me-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .about-me-img {
-  width: 553px;
-  margin-right: 47px;
+	width: 553px;
+	margin-right: 47px;
 }
 
 .about-me-info {
-  min-width: 580px;
-  width: 100%;
+	min-width: 580px;
+	width: 100%;
 }
 
-.about-me-title3 {
-  color: #4C70EF;
-  font-weight: 600;
-  font-size: 24px;
-  line-height:1.5;
-  letter-spacing: 10%;
-  margin-bottom: 12px;
+.overall-title3 {
+	color: #4c70ef;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 1.5;
+	letter-spacing: 10%;
+	margin-bottom: 12px;
 }
 
-.about-me-title {
-font-weight: 600;
-font-size: 36px;
-line-height: 1.5;
-letter-spacing: 0%;
-color:#fff;
+.overall-title {
+	font-weight: 600;
+	font-size: 36px;
+	line-height: 1.5;
+	letter-spacing: 0%;
+	color: #fff;
+	margin-bottom: 32px;
 }
 
 .about-me-text:not(:last-child) {
-  margin-bottom: 16px;
+	margin-bottom: 16px;
 }
+
+/* what start */
+.what {
+	padding-top: 64px;
+	padding-bottom: 60px;
+}
+
+.what-title-wrapper {
+	text-align: center;
+	margin-bottom: 51px;
+}
+
+.what-title {
+	margin-bottom: 0;
+}
+
+.what-list {
+	display: flex;
+	justify-content: space-between;
+	max-width: 980px;
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.what-item {
+	max-width: 480px;
+	width: 100%;
+	background-color: #292c36;
+	border-radius: 12px;
+	padding: 27px 24px 21px;
+}
+
+.what-list-top {
+	display: flex;
+	align-items: center;
+	margin-bottom: 35px;
+}
+
+.what-pic {
+	margin-right: 16px;
+	width: 66px;
+	height: 66px;
+	background-color: #38405a;
+	border-radius: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.what-title3 {
+	font-family: Poppins;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 100%;
+	letter-spacing: 0%;
+	vertical-align: middle;
+	color: #fff;
+	max-width: 219px;
+	width: 100%;
+}
+/* what end */
+/* potfolio start */
+.potfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.potfolio-info {
+  margin-bottom: 32px;
+}
+
+.potfolio-list {
+  display: flex;
+  justify-content: space-between;
+}
+.potfolio-item {
+  max-width: 380px;
+  width: 100%;
+  background-color: #292C36;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+.potfolio-inner {
+  padding: 20px 24px 20px;
+}
+
+.potfilio-title {
+  margin-bottom: 12px;
+font-weight: 600;
+font-size: 20px;
+line-height: 1.5;
+color:#fff;
+}
+
+.potfolio-inner a {
+  background-color: #558FFF;
+  padding: 10px 18px;
+  border-radius: 6px;
+  color: #FFFFFF;
+font-weight: 600;
+font-size: 14px;
+line-height: 1.5;
+letter-spacing: 10%;
+border: 1px solid transparent;
+  transition: all 0.8s ease;
+}
+
+.potfolio-inner a:hover{
+  border: 1px solid #558FFF;
+  background-color: transparent;
+  color: #558FFF;
+}
+
+.potfolio-inner a:active {
+  opacity: 0.4;
+}
+/* potfolio end */
