--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,29 @@ body {
 	padding-right: 20px;
 }
 
+.btn {
+	background-color: #558fff;
+	padding: 10px 18px;
+	border-radius: 6px;
+	color: #ffffff;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 1.5;
+	letter-spacing: 10%;
+	border: 1px solid transparent;
+	transition: all 0.8s ease;
+}
+
+.btn:hover {
+	border: 1px solid #558fff;
+	background-color: transparent;
+	color: #558fff;
+}
+
+.btn:active {
+	opacity: 0.4;
+}
+
 .site-top {
 	background-image: url('../images/header/bg-image\ 1.png');
 	background-repeat: no-repeat;
@@ -277,59 +300,69 @@ body {
 /* what end */
 /* potfolio start */
 .potfolio {
-  padding-top: 60px;
-  padding-bottom: 60px;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 
 .potfolio-info {
-  margin-bottom: 32px;
+	margin-bottom: 32px;
 }
 
 .potfolio-list {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .potfolio-item {
-  max-width: 380px;
-  width: 100%;
-  background-color: #292C36;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
+	max-width: 380px;
+	width: 100%;
+	background-color: #292c36;
+	border-radius: 12px;
+	display: flex;
+	flex-direction: column;
 }
 
 .potfolio-inner {
-  padding: 20px 24px 20px;
+	padding: 20px 24px 20px;
 }
 
 .potfilio-title {
-  margin-bottom: 12px;
-font-weight: 600;
-font-size: 20px;
-line-height: 1.5;
-color:#fff;
+	margin-bottom: 12px;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 1.5;
+	color: #fff;
 }
 
-.potfolio-inner a {
-  background-color: #558FFF;
-  padding: 10px 18px;
-  border-radius: 6px;
-  color: #FFFFFF;
-font-weight: 600;
-font-size: 14px;
-line-height: 1.5;
-letter-spacing: 10%;
-border: 1px solid transparent;
-  transition: all 0.8s ease;
+.main-footer {
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 
-.potfolio-inner a:hover{
-  border: 1px solid #558FFF;
-  background-color: transparent;
-  color: #558FFF;
+.main-footer-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #292c36;
+	border-radius: 12px;
+	max-width: 980px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 78px;
+	padding-bottom: 78px;
 }
 
-.potfolio-inner a:active {
-  opacity: 0.4;
+.main-footer-title {
+	padding-bottom: 32px;
+	color: #fff;
+	font-weight: 600;
+	font-size: 32px;
+	line-height: 100%;
+	letter-spacing: 0%;
 }
+
+.btn {
+}
+
 /* potfolio end */
